Individual-Be-A-Man/04-week-04/iac/3-igw.tf
# Deploy Internet Gateway

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "igw"
  }
}
